[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/ToolFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/ListControl.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.345098, 0.760784, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[node name="ALTEMON_LIST" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SEARCH" type="Panel" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SEARCH"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SEARCH/HBoxContainer"]
margin_top = 6.0
margin_right = 49.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "SEARCH"

[node name="SEARCH" type="LineEdit" parent="SEARCH/HBoxContainer"]
margin_left = 59.0
margin_right = 1004.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="LIST" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 41.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIST" type="VBoxContainer" parent="LIST"]
margin_right = 1024.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ADD" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -40.0
margin_right = 128.0
margin_bottom = -10.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "NEW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="text_changed" from="SEARCH/HBoxContainer/SEARCH" to="." method="_on_SEARCH_text_changed"]
[connection signal="button_down" from="ADD" to="." method="_on_add_button_down"]
